# eng-journal

./: .gitignore  .releaserc.json  LEARNING.md  PROGRESS.md  README.md  hyperdata.json  package.json  pyproject.toml
.github/workflows/: release.yml
checkpoints/2025-10-01_to_2026-03-31/: dataset.json  manifest.json
journal/: __init__.py  analytics.py  checkpoints.py  claude.py  cli.py  codex.py  config.py  gh_audit.py  git_insights.py  pricing.py  reporting.py  scheduler.py  screenshots.py  serialization.py  storage.py  util.py
lisp/: roi-core.lisp
references/gh-audit/: latest.json
reports/: appraisal-2026-02-12_to_2026-03-31.md  core-value-2026-02-12_to_2026-03-31.md  daily-2026-03-31.md  dashboard-2025-10-01_to_2026-03-31.txt  dashboard-2026-01-01_to_2026-03-31.txt  dashboard-2026-02-12_to_2026-03-31.txt  impact-2025-10-01_to_2026-03-31.md  prompts-claude_code-2025-10-01_to_2026-03-31.md  prompts-claude_code-2026-01-01_to_2026-03-31.md  prompts-codex-2025-10-01_to_2026-03-31.md  prompts-codex-2026-01-01_to_2026-03-31.md  prompts-codex-2026-02-12_to_2026-03-31.md  review-2025-10-01_to_2026-03-31.md  review-2026-01-01_to_2026-03-31.md  roi-2025-10-01_to_2026-03-31.md  roi-2026-01-01_to_2026-03-31.md  roi-2026-02-12_to_2026-03-31.md  scheduler-status.md  stats-2025-10-01_to_2026-03-31.json  stats-2025-10-01_to_2026-03-31.md  stats-2026-01-01_to_2026-03-31.json  stats-2026-01-01_to_2026-03-31.md  weekly-2026-02-12_to_2026-03-31.md
tests/: test_analytics.py  test_cli.py  test_config.py  test_gh_audit.py  test_pricing.py  test_scheduler.py  test_storage.py
(+2 files in other folders)
